<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:context=".SignUpFragment">

        <TextView
            android:id="@+id/nig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/project_font_bold"
            android:text="@string/nig"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Mart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/project_font_bold"
            android:text="@string/mart"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/nig"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/project_font_bold"
            android:text="@string/sign_up"
            android:textColor="@color/dark_blue"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nig" />

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/username"
            android:textColor="@color/ash_light"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@+id/usernameText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:textColorHint="@color/ash_light"
                android:textColor="@color/ash_light"
                app:boxStrokeColor="@color/ash_light"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textColor="@color/ash_light"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@+id/emailText"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:textColorHint="@color/ash_light"
                android:textColor="@color/ash_light"
                app:boxStrokeColor="@color/ash_light"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/ash_light"
            app:layout_constraintTop_toBottomOf="@+id/passwordText"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textColor="@color/ash_light"
                android:textColorHint="@color/ash_light"
                android:inputType="textPassword"
                app:boxStrokeColor="@color/ash_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/confirmPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/confirm_password"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/ash_light"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordText"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textColor="@color/ash_light"
                android:textColorHint="@color/ash_light"
                android:inputType="textPassword"
                app:boxStrokeColor="@color/ash_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/keepMeLoggedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_logged_in"
            android:textColor="@color/ash_light"
            android:textColorHighlight="@color/blue"
            android:textColorLink="@color/blue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordInput" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:padding="15dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keepMeLoggedIn" />

        <LinearLayout
            android:id="@+id/signupLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/signUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/hasAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/already_have_an_account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>