<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NigMartStoreFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/nav_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_menu"
                    android:backgroundTint="@android:color/transparent"
                    app:tint="@color/dark_blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/navigation_menu_desc"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/nig"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/project_font_bold"
                    android:text="@string/nig"
                    android:textColor="@color/dark_blue"
                    android:textSize="20sp"
                    android:gravity="center"
                    app:layout_constraintStart_toEndOf="@id/nav_menu"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/Mart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/project_font_bold"
                    android:text="@string/mart"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:gravity="center"
                    app:layout_constraintStart_toEndOf="@id/nig"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/goToCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_shopping_cart"
                    app:tint="@color/dark_blue"
                    android:contentDescription="@string/go_to_cart_desc"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_marginHorizontal="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_items" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>